xray server fix

--- a/setup/etc/xray/config.json.template
+++ b/setup/etc/xray/config.json.template
@@ -42,6 +42,10 @@
     {
       "protocol": "blackhole",
       "tag": "block"
+    },
+    {
+      "protocol": "freedom",
+      "tag": "proxy"
     }
   ],
   "dns": {
